--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
             <div class="profile-container">
                 <div class="profile-img">
                     <!-- Ganti dengan tag img untuk foto Anda atau biarkan inisial -->
-                    <span>NS</span>
+                    <span>RA</span>
                 </div>
-                <h1 class="profile-name">Nama Saya</h1>
-                <p class="profile-title">Posisi / Profesi</p>
+                <h1 class="profile-name">Muhammad Rafli Arifin</h1>
+                <p class="profile-title">Mahasiswa</p>
                 <div class="social-icons">
                     <!-- Ganti dengan URL media sosial Anda -->
                     <a href="#" class="social-icon">📱</a>
@@ -231,11 +231,11 @@
         <section class="section">
             <h2 class="section-title">Informasi Pribadi</h2>
             <div class="info-item">
-                <div class="info-label">Nama Lengkap: Muhammad Rafli Arifin</div>
+                <div class="info-label">Nama Lengkap:</div>
                 <div class="info-value">Muhammad Rafli Arifin</div>
             </div>
             <div class="info-item">
-                <div class="info-label">Tanggal Lahir: 23 Januari 2006</div>
+                <div class="info-label">Tanggal Lahir:</div>
                 <div class="info-value">23 Januari 2006</div>
             </div>
             <div class="info-item">
@@ -248,6 +248,8 @@
             <h2 class="section-title">Keahlian</h2>
             <div class="skills-container">
                 <div class="skill-item">Bermain Game </div>
+                <div class="skill-item">Belajar</div>
+                <div class="skill-item">Tidur</div>
             </div>
         </section>
 
@@ -256,14 +258,14 @@
             <div class="education-item">
                 <div class="education-year">2023 - Sekarang</div>
                 <div class="education-degree">Ilmu Komputer</div>
-                <div class="education-school">UHO</div>
+                <div class="education-school">Universitas Halu Oleo</div>
             </div>
         </section>
-        <section class="section">
+        <!-- <section class="section">
             <h2 class="section-title">Kontak</h2>
             <p>Jika Anda tertarik untuk berkolaborasi atau memiliki pertanyaan, jangan ragu untuk menghubungi saya.</p>
             <a href="mailto:email@contoh.com" class="contact-button">Kirim Email</a>
-        </section>
+        </section> -->
     </main>
 
     <footer>
