--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             </div>
             <div class="info-item">
                 <div class="info-label">Tanggal Lahir:</div>
-                <div class="info-value">23 Januari 2006</div>
+                <div class="info-value">2006</div>
             </div>
             <div class="info-item">
                 <div class="info-label">Email:</div>
