--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             </div>
             <div class="info-item">
                 <div class="info-label">Email:</div>
-                <div class="info-value">email@contoh.com</div>
+                <div class="info-value">rafliarifin303@gmail.com</div>
             </div>         
         </section>
 
@@ -347,8 +347,14 @@
             <h2 class="section-title"><i class="fas fa-code"></i> Keahlian</h2>
             <div class="skills-container">
                 <div class="skill-item">Bermain Game</div>
-                <div class="skill-item">Belajar</div>
-                <div class="skill-item">Tidur</div>
+                <div class="skill-item">HTML</div>
+                <div class="skill-item">CSS</div>
+                <div class="skill-item">JavaScript</div>
+                <div class="skill-item">PHP</div>
+                <div class="skill-item">Laravel</div>
+                <div class="skill-item">SQL</div>
+                <!-- <div class="skill-item">Belajar</div>
+                <div class="skill-item">Tidur</div> -->
             </div>
         </section>
 
@@ -358,6 +364,21 @@
                 <div class="education-year">2023 - Sekarang</div>
                 <div class="education-degree">Ilmu Komputer</div>
                 <div class="education-school">Universitas Halu Oleo</div>
+            </div>
+            <div class="education-item">
+                <div class="education-year">2020 - 2023</div>
+                <div class="education-degree">Teknik Komputer dan Jaringan</div>
+                <div class="education-school">SMKN 1 Kendari</div>
+            </div>
+            <div class="education-item">
+                <div class="education-year">2017 - 2020</div>
+                <!-- <div class="education-degree">Teknik Komputer dan Jaringan</div> -->
+                <div class="education-school">SMPN 9 Kendari</div>
+            </div>
+            <div class="education-item">
+                <div class="education-year">2011 - 2017</div>
+                <!-- <div class="education-degree">Teknik Komputer dan Jaringan</div> -->
+                <div class="education-school">SDN 68 Kendari</div>
             </div>
         </section>
 
