--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <p class="profile-title">Mahasiswa</p>
                 <div class="social-icons">
                     <a href="https://www.instagram.com/rplxx_" class="social-icon"><i class="fab fa-instagram"></i></a>
-                    <a href="www.youtube.com/@MuhammadRafliArifin" class="social-icon"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/@MuhammadRafliArifin" class="social-icon"><i class="fab fa-youtube"></i></a>
                     <a href="https://github.com/Rafliarifin" class="social-icon"><i class="fab fa-github"></i></a>
                 </div>
             </div>
